# langchain-qna

./: .env  README.md  pyproject.toml
src/: __init__.py  main.py
