[tool.poetry]
name = "pdf-qna"
version = "0.1.0"
description = ""
authors = ["Jairo Rodrigues <jairo.rjunior@telefonica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.271"
click = "^8.1.7"
rich = "^13.5.2"
python-dotenv = "^1.0.0"
pypdf = "^3.15.2"
openai = "^0.27.9"
chromadb = "^0.4.7"
tiktoken = "^0.4.0"
unstructured = "^0.10.5"
python-magic-bin = "^0.4.14"
sentence-transformers = "^2.2.2"
youtube-transcript-api = "^0.6.1"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
